# axum_otel_tempo

./: .env.dummy  Cargo.toml
src/: main.rs  startup.rs
