[package]
name = "axum_otel_tempo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# opentelemetry-stdout = { version = "0.1.0", features = ["trace"] }axum = { version = "0.6", features = ["tracing"] }
axum = { version = "0.6.20", features = ["tracing"] }
dotenvy = "0.15.7"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-opentelemetry = "0.21"
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
axum-tracing-opentelemetry = "0.14.1"
opentelemetry-otlp = { version = "0.13.0", features = [
	"tokio",
	"http-proto",
	"reqwest-client",
] }
base64 = "0.21.4"
reqwest = "0.11.22"
